RESOLVED FIXED77396
Scrollbars don't show when scrolling on the scrolling thread
https://bugs.webkit.org/show_bug.cgi?id=77396
Summary Scrollbars don't show when scrolling on the scrolling thread
Anders Carlsson
Reported 2012-01-30 18:34:36 PST
Scrollbars don't show when scrolling on the scrolling thread
Attachments
Patch (2.07 KB, patch)
2012-01-30 18:36 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2012-01-30 18:36:24 PST
Anders Carlsson
Comment 2 2012-01-30 18:43:59 PST
Note You need to log in before you can comment on or make changes to this bug.