Scrollbars don't show when scrolling on the scrolling thread https://bugs.webkit.org/show_bug.cgi?id=77396 <rdar://problem/10710736>

Reviewed by Sam Weinig.

Use ScrollAnimator::scrollToOffsetWithoutAnimation when updating the frame view scroll offset,
since that function will end up invalidating the scrollbars correctly.

* page/ScrollingCoordinator.cpp:
(WebCore::ScrollingCoordinator::didUpdateMainFrameScrollPosition):

git-svn-id: svn://svn.chromium.org/blink/trunk@106317 bbb929c8-8fbe-4397-9dbb-9b2b20218538