third_party/WebKit/Source/WebCore/page/ScrollingCoordinator.cpp
@@ -35,6 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "IntRect.h"
 #include "Page.h"
 #include "PlatformWheelEvent.h"
+#include "ScrollAnimator.h"
 #include <wtf/Functional.h>
 #include <wtf/MainThread.h>
 #include <wtf/PassRefPtr.h>
@@ -142,8 +143,11 @@ void ScrollingCoordinator::didUpdateMainFrameScrollPosition()
         m_didDispatchDidUpdateMainFrameScrollPosition = false;
     }
 
-    if (FrameView* frameView = m_page->mainFrame()->view())
-        frameView->setScrollOffset(scrollPosition);
+    if (FrameView* frameView = m_page->mainFrame()->view()) {
+        frameView->setConstrainsScrollingToContentEdge(false);
+        frameView->scrollToOffsetWithoutAnimation(scrollPosition);
+        frameView->setConstrainsScrollingToContentEdge(true);
+    }
 }
 
 } // namespace WebCore
